# Neural_network_xG_model

./: Euro Test.py  Euro_Test.py  Model.py  README.md  Shots_Features_Sb.py  Statsbomb.py  pyproject.toml  xG advancement.py  xG_advancement.py
Source/: Euro_Test.py  Model.py  Shots_Features_Sb.py  euro_viz.py  euros_results.py  jmann_viz_setup.py  model.py  model_training.py  model_var_setup.py  pizza_plot_viz.py  statsbomb_jm.py  xG_advancement.py
tests/: Shot_Feature_Tests.py  model_setup_tests.py
