[tool.poetry]
name = "lesson 6- pitch control"
version = "0.1.0"
description = ""
authors = ["Jmann777 <87671742+Jmann777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
